--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
     </dependencies>
     
     <build>
